--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ a{
     box-sizing: border-box;
     display: block;
     width: 100vw;
-    height: 90vh;
+    height: 80vh;
     object-fit: cover;
     /* position: absolute; */
 }
@@ -284,7 +284,7 @@ a{
         position: absolute;
         width: 400%;
         top: 200px;
-        height: 700px;
+        /* height: 600px; */
     }
     .slide{
         display: grid;
@@ -294,7 +294,7 @@ a{
     .img{
         grid-row: 2;
         position: absolute;
-        height: 100vh;
+        /* height: 100vh; */
         z-index: 5;
     }
     .descricao-container{
@@ -323,6 +323,14 @@ a{
         top: 950px;
         left: 50px;
         z-index: 10;
+    }
+}
+@media (max-width: 720px) {
+    body{
+        /* overflow-x: hidden; */
+    }
+    .slides{
+        /* max-width: 100%; */
     }
 }
 @media (max-width: 560px){
