Ajustando a parte responsiva do site

--- a/style.css
+++ b/style.css
@@ -56,16 +56,14 @@ a{
 }
 .descricao-container{
     position: absolute;
-    top: -150px;
-    left: 25px;
     width: 40%;
-    height: 100%;
+    height: 70%;
     z-index: 2;
     display: flex;
     flex-direction: column;
-    -webkit-box-pack: center;
     justify-content: center;
-    padding: 2rem;
+    padding: 20px;
+    margin: 30px 20px 20px 15px;
     gap: 1rem;
 }
 .slide .descricao{
@@ -282,7 +280,7 @@ a{
     /* slides */
     .slides{
         position: absolute;
-        width: 400%;
+        width: 500%;
         top: 200px;
         /* height: 600px; */
     }
@@ -383,6 +381,25 @@ a{
     .title h2 strong{
         font-size: 1.7rem;
     } */
+}
+@media (max-width: 360px){
+    .title{
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: 10px;
+    }
+    .title h2{
+        font-size: 1.4rem;
+    }
+    .title h2 strong{
+        font-size: 1.4rem;
+    }
+    .descricao-container .descricao{
+        
+        margin-left: -15px;
+        width: 100%;
+    }
+
 }
 
 /* Fim da seção - Vinicius Silva Souza */
