--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ a{
 .container{   
     margin: 0 auto;
     width: 100%;  /*essa largura é definida com base ao tamnho do munitor q é 1600px */
-    height: 750px;
-    overflow: hidden;
+    height: 500px;
+    /* overflow: hidden; */
     /* position: relative; */
 }
 
@@ -268,19 +268,23 @@ a{
         height: 0px;
     }
     .title{
-        margin-left: 50px;
+        margin-left: 200px;
+        
         
     }
     .title h2{
         position: absolute;
         top: 10px;
-        font-size: 2rem;
+        font-size: 2.1rem;
         margin-bottom: 50px;
+    }
+    .title strong{
+        font-size: 2.1rem;
     }
     /* slides */
     .slides{
         position: absolute;
-        width: 500%;
+        width: 400%;
         top: 200px;
         /* height: 600px; */
     }
@@ -300,6 +304,9 @@ a{
         top: -230px;
         width: 90%;
     }
+    .descricao-container .descricao h3{
+        font-size: 1.8rem;
+    }
     #image{
         display: none;
     }
@@ -311,24 +318,27 @@ a{
     .manual-navigation{
         position: absolute;
         width: 100%;
-        top: 950px;
+        top: 850px;
         left: 50px;
         z-index: 10;
     }
     .navigation-auto{
         position: absolute;
         width: 100%;
-        top: 950px;
+        top: 850px;
         left: 50px;
         z-index: 10;
     }
 }
-@media (max-width: 720px) {
+@media (max-width: 734px) {
     body{
         overflow-x: hidden;
     }
+    .title{
+        margin-left: 100px;
+    }
     .slides{
-        /* max-width: 100%; */
+        margin-top: 60px;
     }
 }
 @media (max-width: 560px){
@@ -383,6 +393,10 @@ a{
     } */
 }
 @media (max-width: 360px){
+    /* html{
+        height: 30px;
+        
+    } */
     .title{
         display: flex;
         flex-wrap: wrap;
@@ -394,10 +408,38 @@ a{
     .title h2 strong{
         font-size: 1.4rem;
     }
+    .slides{
+        position: absolute;
+        top: 100px;
+    }
+    .slide {
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+    }
+    .slide img{
+        height: 100%;
+    }
+    .descricao-container{
+        grid-row: 2;
+        margin-top: -105px;
+    }
     .descricao-container .descricao{
-        
         margin-left: -15px;
         width: 100%;
+    }
+    .manual-navigation{
+        position: absolute;
+        width: 100%;
+        top: 670px;
+        left: 30px;
+        z-index: 10;
+    }
+    .navigation-auto{
+        position: absolute;
+        width: 100%;
+        top: 670px;
+        left: 30px;
+        z-index: 10;
     }
 
 }
