--- a/style.css
+++ b/style.css
@@ -21,7 +21,9 @@ a{
 .title{
     text-align: center;
     font-size: 1.785rem;
-    margin-bottom: 2rem;
+    position: relative;
+    bottom: 115px;
+    /* margin-bottom: 2rem; */
 }
 
 .title strong{
@@ -51,6 +53,7 @@ a{
 /* slide */
 .slide{
     width: 25%;
+    height: 100%;
     position: relative;
 
 }
@@ -101,7 +104,7 @@ a{
     box-sizing: border-box;
     display: block;
     width: 100vw;
-    height: 80vh;
+    height: 100vh;
     object-fit: cover;
     /* position: absolute; */
 }
@@ -110,7 +113,7 @@ a{
     display: block;
     overflow: hidden;
     width: initial;
-    height: initial;
+
     background: none;
     border: 0px;
     margin: 0px;
@@ -119,7 +122,7 @@ a{
     z-index: -1;
 }
 .showImg{
-    display: inline;
+    display: none !important;
 }
 
 /* botão saiba mais */
@@ -180,13 +183,16 @@ a{
     position: absolute;
     /* min-width: 700px; */
     width: 100%;
-    top: 550px;
+    top: 670px;
     display: flex;
     justify-content: center;
-    left: 20px;
+    left: 21px;
+    z-index: 10;
 }
 
 .manual-btn{
+    /* position: absolute; */
+    /* left: 1110px; */
     border: 2px solid #fff;
     padding: 5px;
     border-radius: 10px;
@@ -219,10 +225,11 @@ a{
  .navigation-auto{
     position: absolute;
     width: 100%;
-    top: 550px;
+    top: 670px; 
     display: flex;
     justify-content: center;
     left: 20px;
+    z-index: 10;
  }
 .navigation-auto div:not(:last-child){
     margin-right: 10px;
@@ -239,30 +246,7 @@ a{
 }
 
 /* Respondividade */
-/* @media (max-width: 1300px){
-    .setas .direita{
-        position: absolute;
-        left: 1550px;
-    }
-} */
-/* @media (max-width: 1100px) {
-    .setas .direita{
-        position: absolute;
-        left: 1000px;
-    }
-}
-@media (max-width: 1038px){
-    .setas .direita{
-        position: absolute;
-        left: 940px;
-    }
-}
-@media (max-width: 980px){
-    .setas .direita{
-        position: absolute;
-        left: 830px;
-    }
-} */
+
 @media (max-width: 860px){
     body{
         height: 0px;
@@ -310,6 +294,9 @@ a{
     #image{
         display: none;
     }
+    .showImg{
+        display: block !important;
+    }
     /* Fim slides */
     .setas{
         top: 560px;
@@ -320,14 +307,14 @@ a{
         width: 100%;
         top: 850px;
         left: 50px;
-        z-index: 10;
+        z-index: 100;
     }
     .navigation-auto{
         position: absolute;
         width: 100%;
         top: 850px;
         left: 50px;
-        z-index: 10;
+        z-index: 100;
     }
 }
 @media (max-width: 734px) {
@@ -400,6 +387,8 @@ a{
     .title{
         display: flex;
         flex-wrap: wrap;
+        position: relative;
+        top: 240px;
         margin-left: 10px;
     }
     .title h2{
@@ -410,7 +399,7 @@ a{
     }
     .slides{
         position: absolute;
-        top: 100px;
+        top: 50px;
     }
     .slide {
         display: grid;
